# mybabymonitor.org

./: .gitignore  Application.hs  BabyCommunication.hs  Design.org  Foundation.hs  Main.hs  README.md  Settings.hs  baby-local.html  baby-local.js  baby.html  baby.js  common.js  deploy.sh  home.html  mybabymonitor.org.cabal  parent.html  parent.js  shell.nix
BabyMonitor/: BabyCommunication.hs  Client.hs  ClientMap.hs  Family.hs  Server.hs  Types.hs  UId.hs  UIdDIY.hs
BabyPhone/: BabyCommunication.hs
Handler/: Baby.hs  Common.hs  Home.hs  Parent.hs  Session.hs
app/: devel.hs
config/: keter.yml  routes  settings.yml  test-settings.yml
frontend/: Baby.elm  Main.elm  Server.elm  bower.json  package.json
frontend/Util/: NavigationBar.elm  Views.elm
frontend/src/: App.purs  Main.purs
frontend/src/Util/: NavigationBar.purs  Views.purs
pitch-netidee/: bower.json  setupEnv.sh
pitch-netidee/src/: Main.purs  MyClasses.purs  Slide1.purs  Slide2.purs  Slide3.purs  Slide4.purs  Slide5.purs  Slide6.purs  Slide8.purs  Slides.purs  Types.purs  index.html  pitch.css
pitch-netidee/src/fonts/: indieflower-webfont.eot  opensans-regular-webfont.eot
templates/: baby.hamlet  baby.julius  common.julius  common.lucius  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.julius  default-layout.lucius  heading.hamlet  home-js.julius  home.hamlet  home.julius  home.lucius  layout.hamlet  layout.lucius  parent.hamlet  parent.julius
