name:              mybabymonitor-org
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.Session
                     Handler.Baby
                     Handler.Parent
                     BabyMonitor.BabyCommunication

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: aeson                         >= 0.6        && < 0.9
                 , base                          >= 4          && < 5
                 , binary >= 0.7.1.0
                 , bitstream
                 , bytestring                    >= 0.9        && < 0.11
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , conduit                       >= 1.0        && < 2.0
                 , containers
                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 2.2        && < 2.3
                 , file-embed
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 2.1        && < 2.2
                 , lifted-base
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3        && < 0.4
                 , network
                 , safe
                 , shakespeare                   >= 2.0        && < 2.1
                 , split >= 0.2.2
                 , stm
                 , system-uuid
                 , template-haskell
                 , text                          >= 0.11       && < 2.0
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra                     >= 3.0        && < 3.1
                 , wai-logger                    >= 2.2        && < 2.3
                 , warp                          >= 3.0        && < 3.1
                 , websockets
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.5
                 , yesod-websockets
                 , sandi
                 , either

executable         mybabymonitor.org
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , binary >= 0.7.1.0
                     , mybabymonitor-org
                     , split >= 0.2.2

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , binary >= 0.7.1.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , hspec
                 , mybabymonitor-org
                 , split >= 0.2.2
                 , yesod
                 , yesod-core
                 , yesod-test >= 1.4.2 && < 1.5
